@@ -1,4 +1,7 @@
 master:
+ - General:
+   * Read support for Guralp Compressed Format (GCF) waveform data,
+     obspy.io.gcf (see #1449)
  - obspy.core:
    * Stream/Trace.write() can now autodetect file format from file extension.
    * New convenience property `.matplotlib_date` for `UTCDateTime` objects to
@@ -36,8 +39,6 @@ master:
  - obspy.scripts:
    * obspy-scan command line script now also plots and prints overlaps
      alongside gaps (see #1366)
- - obspy.io.gcf
-    * Read support for Guralp Compressed Format (GCF) waveform data. (see #1449)
 
 1.0.2: (doi: 10.5281/zenodo.49636)
  - obspy.core:
